--- a/package.json
+++ b/package.json
@@ -11,7 +11,12 @@
     "amfe-flexible": "^2.2.1",
     "axios": "^0.27.2",
     "core-js": "^3.8.3",
+    "cropperjs": "^1.5.12",
     "dayjs": "^1.11.3",
+    "github-markdown-css": "^5.1.0",
+    "highlight": "^0.2.4",
+    "json-bigint": "^1.0.0",
+    "showdown": "^2.1.0",
     "vant": "^2.12.48",
     "vue": "^2.6.14",
     "vue-router": "^3.5.1",
